<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.cloudera.demo</groupId>
  <artifactId>iiot</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <top.dir>${project.basedir}/..</top.dir>
    <spark.version>1.6.0-cdh5.10.0</spark.version>
    <scala.version>2.10.5</scala.version>
    <kafka.version>0.10.0.0</kafka.version>
    <kudu.version>1.2.0-cdh5.10.0</kudu.version>
    <scala.binary.version>2.10</scala.binary.version>
    <protobuf.version>2.6.1</protobuf.version>
  </properties>

    <build>
        <testSourceDirectory>src/test/scala</testSourceDirectory>

            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.3</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>net.alchim31.maven</groupId>
                    <artifactId>scala-maven-plugin</artifactId>
                    <version>3.2.0</version>
                    <configuration>
                        <charset>UTF-8</charset>
                        <scalaVersion>${scala.version}</scalaVersion>
                    </configuration>
                    <executions>
                        <execution>
                            <id>scala-compile-first</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>add-source</goal>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>scala-test-compile</id>
                            <phase>process-test-resources</phase>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.scalatest</groupId>
                    <artifactId>scalatest-maven-plugin</artifactId>
                    <version>1.0</version>
                    <configuration>
                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                        <junitxml>.</junitxml>
                        <filereports>WDF TestSuite.txt</filereports>
                        <parallel>false</parallel>
                    </configuration>
                    <executions>
                        <execution>
                            <id>test</id>
                            <phase>test</phase>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <configuration>
                                <skipTests>true</skipTests>
                            </configuration>
                        </execution>
                        <execution>
                            <id>integration-test</id>
                            <phase>integration-test</phase>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <configuration>
                                <tagsToExclude>Integration-Test</tagsToExclude>
                                <argLine>
                                    -Xmx1536m -XX:MaxPermSize=512m -XX:ReservedCodeCacheSize=512m
                                </argLine>
                                <parallel>false</parallel>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>2.2</version>
                    <configuration>
                        <shadedArtifactAttached>false</shadedArtifactAttached>
                        <outputFile>target/CargoDemoCloudera.jar</outputFile>
                        <artifactSet>
                            <includes>
                                <include>*:*</include>
                            </includes>
                        </artifactSet>
                        <filters>
                            <filter>
                                <artifact>*:*</artifact>
                                <excludes>
                                    <exclude>META-INF/*.SF</exclude>
                                    <exclude>META-INF/*.DSA</exclude>
                                    <exclude>META-INF/*.RSA</exclude>
                                </excludes>
                            </filter>
                        </filters>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <transformers>
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                    <transformer
                                            implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                        <resource>reference.conf</resource>
                                    </transformer>
                                </transformers>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                  <groupId>com.github.os72</groupId>
                  <artifactId>protoc-jar-maven-plugin</artifactId>
                  <version>3.3.0.1</version>
                  <executions>
                      <execution>
                      <phase>generate-sources</phase>
                      <goals>
                        <goal>run</goal>
                      </goals>
                      <configuration>
                        <protocVersion>${protobuf.version}</protocVersion>
                        <outputDirectory>src/main/scala</outputDirectory>
                        <inputDirectories>
                            <include>src/main/resources</include>
                        </inputDirectories>
                      </configuration>
                    </execution>
                  </executions>
                </plugin>

            </plugins>

    </build>

  <repositories>
      <repository>
          <id>cloudera-repo</id>
          <name>Cloudera Repository</name>
          <url>https://repository.cloudera.com/artifactory/cloudera-repos</url>
          <releases>
              <enabled>true</enabled>
          </releases>
          <snapshots>
              <enabled>false</enabled>
          </snapshots>
      </repository>
  </repositories>


  <pluginRepositories>

    <pluginRepository>
      <id>repo1.maven.org</id>
      <url>http://repo1.maven.org/maven2</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>

    <pluginRepository>
      <id>oss.sonatype.org</id>
      <url>https://oss.sonatype.org/content/groups/public</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
    </pluginRepository>

  </pluginRepositories>


  <dependencies>
      <!-- Force import of Spark's servlet API for unit tests -->
      <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
          <version>3.0.1</version>
          <scope>test</scope>
      </dependency>

      <!-- Mark Spark / Scala as provided -->
      <dependency>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-library</artifactId>
          <version>${scala.version}</version>
      </dependency>

      <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-core_${scala.binary.version}</artifactId>
          <version>${spark.version}</version>
          <!--<scope>provided</scope>-->
          <exclusions>
              <exclusion>
                  <!-- make sure wrong scala version is not pulled in -->
                  <groupId>org.scala-lang</groupId>
                  <artifactId>scala-library</artifactId>
              </exclusion>
              <exclusion>
                  <!-- make sure wrong scala version is not pulled in -->
                  <groupId>org.scala-lang</groupId>
                  <artifactId>scalap</artifactId>
              </exclusion>
          </exclusions>
      </dependency>

      <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-mllib_${scala.binary.version}</artifactId>
          <version>${spark.version}</version>
          <!--<scope>provided</scope>-->
      </dependency>

      <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-streaming_${scala.binary.version}</artifactId>
          <version>${spark.version}</version>
      </dependency>

      <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-streaming-kafka_${scala.binary.version}</artifactId>
          <version>${spark.version}</version>
      </dependency>

      <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-streaming_${scala.binary.version}</artifactId>
          <version>${spark.version}</version>
          <type>test-jar</type>
          <classifier>tests</classifier>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>org.apache.kafka</groupId>
          <artifactId>kafka-clients</artifactId>
          <version>${kafka.version}</version>
      </dependency>

      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>4.12</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>org.scalatest</groupId>
          <artifactId>scalatest_${scala.binary.version}</artifactId>
          <version>2.2.1</version>
          <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>org.apache.kudu</groupId>
        <artifactId>kudu-client</artifactId>
        <version>${kudu.version}</version>
      </dependency>

      <dependency>
        <groupId>org.apache.kudu</groupId>
        <artifactId>kudu-spark_2.10</artifactId>
        <version>${kudu.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${protobuf.version}</version>
      </dependency>

  </dependencies>

</project>
